Guardar datos del token en el filtro de autenticación para poder emplearlos en los endpoint (userId)