@@ -9,11 +9,13 @@ import jakarta.servlet.http.HttpServletRequest;
 import jakarta.servlet.http.HttpServletResponse;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.security.authentication.UsernamePasswordAuthenticationToken;
+import org.springframework.security.core.GrantedAuthority;
 import org.springframework.security.core.context.SecurityContextHolder;
 import org.springframework.stereotype.Component;
 import org.springframework.web.filter.OncePerRequestFilter;
 
 import java.io.IOException;
+import java.util.Collections;
 import java.util.List;
 
 // Esta clase se va a llamar para verificar el token pasado a la api
@@ -41,9 +43,15 @@ public class JwtAuthenticationFilter extends OncePerRequestFilter {
                     .getBody();
 
             final String userName = claims.getSubject();
-            UsernamePasswordAuthenticationToken authentication =
-                    new UsernamePasswordAuthenticationToken(userName, null, List.of());
-            SecurityContextHolder.getContext().setAuthentication(authentication);
+            final Long userId = claims.get("userId", Long.class);
+
+            // Aquí puedes añadir roles si los tienes
+            List<GrantedAuthority> authorities = Collections.emptyList();
+            CustomUserDetails userDetails = new CustomUserDetails(userId, userName, authorities);
+            UsernamePasswordAuthenticationToken authToken =
+                    new UsernamePasswordAuthenticationToken(userDetails, null, userDetails.getAuthorities());
+
+            SecurityContextHolder.getContext().setAuthentication(authToken);
         } catch (JwtException e) {
             response.sendError(HttpServletResponse.SC_UNAUTHORIZED, "Token inválido");
             return;
